--- a/www/XElement/src/styles/tailwind.scss
+++ b/www/XElement/src/styles/tailwind.scss
@@ -1,7 +1,7 @@
+@use './variables.scss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 /**
     ***FOUC Hack***
 
@@ -9,20 +9,54 @@
     Have CSS turn off the HTML page in effect,
     Turn it back on as the last thing it does before closing the door
 */
-html,body{visibility: hidden;opacity:0;}
+// html,body{opacity: 0;visibility: hidden}
+:root{opacity: 0;visibility: hidden}
 
 
 *,::before,::after{
-    font-size: calc(1em + 1vw);
+    border: 1px dashed rebeccapurple;
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+}
+:root{
+    color-scheme: light dark;
 }
 
-
+html{
+    @apply bg-slate-200
+}
+:root.dark{
+    @apply bg-slate-800
+}
+:root.warm{
+    @apply bg-indigo-600
+}
+/**
+    ***FlexBox Hacks***
+*/
+.break{
+    &__row{
+        flex-basis: 100%;
+    height: 0;
+    }
+    &__column{
+        flex-basis: 100%;
+        width: 0;
+    }
+}
 /**
     ***FOUC Hack***
     Telling CSS to turn the lights back on
     Before it closes the proverbial door on it's self
 */
-html,body{
+// html,body{
+//     visibility: visible;
+//     opacity: 1;
+// }
+:root{
     visibility: visible;
     opacity: 1;
 }
