--- a/www/XElement/src/styles/variables.scss
+++ b/www/XElement/src/styles/variables.scss
@@ -4,9 +4,18 @@
 :root{
 
     //Site Colours
-
     
+    // --bg-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    --bg-image:linear-gradient(to top, #white 0%, #eef1f5 100%);
 
-    --bg-linear: linear-gradient(352deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-
+}
+:root.warm{
+    --bg-image: linear-gradient(to bottom,#e9e9e9  0%, #ffecd2 100%);
+}
+:root.dark{
+    
+    // --bg-image: linear-gradient(to top, #101824 0%, #253d50 100%);
+    // --bg-image: linear-gradient(to bottom, #232526 0%, black 100%);
+    // --bg-image: linear-gradient(180deg, rgba(46,52,62,1) 11%, rgba(35,35,47,1) 73%, rgba(14,14,25,1) 100%)
+    // @apply bg-slate-900
 }
