--- a/www/XElement/src/pages/index.astro
+++ b/www/XElement/src/pages/index.astro
@@ -30,6 +30,6 @@ import Counter from '../components/Counter.jsx'
 			<Counter {count=0} client:load>
 				<h1>Hello from React</h1>
 			</Counter>
-			<video data-html5-video="" preload="auto" src="blob:http://www.hesgoal.com/9f216499-0978-490a-a281-f57ef8f2a9fb"><style class="clappr-style">[data-html5-video]{position:absolute;height:100%;width:100%;display:block}</style></video>
+		<Sandy client:only/>
 	</body>
 </html>
