--- a/www/XElement/src/styles/tailwind.scss
+++ b/www/XElement/src/styles/tailwind.scss
@@ -1,7 +1,4 @@
 @use './variables.scss';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 /**
     ***FOUC Hack***
 
@@ -9,40 +6,73 @@
     Have CSS turn off the HTML page in effect,
     Turn it back on as the last thing it does before closing the door
 */
-// html,body{opacity: 0;visibility: hidden}
 html,body{opacity: 0;visibility: hidden}
 
+/**
+    Tailwind Directives
+*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
 
-*,::before,::after{
-    border: 1px dashed rebeccapurple;
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-wrap: break-word;
-}
-:root{
-    color-scheme: light dark;
+@layer base{
+    *,::before,::after{
+        // border: 1px dashed rebeccapurple;
+        margin: 0;
+        padding:0;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        overflow-wrap: break-word;
+        scroll-behavior: smooth;
+        scroll-padding-top:3rem;
+    }
+
+    html{
+        @apply bg-[color:var(--theme-bg-color)] transition-colors ;
+    }
+
+    //Headings
+    h1{
+        @apply text-3xl
+    }
+    h2{
+        @apply text-2xl
+    }
+    h3{
+        @apply text-xl
+    }
+    p{
+        @apply text-lg
+    }
+    article{
+        @apply prose prose-p:[color:var(--theme-text-color)];
+    }
+    
 }
 
-html{
-    @apply bg-white transition-colors ;
+@layer components{
+
 }
-html.warm{
-    @apply bg-orange-100;
+@layer utilities{
+
 }
-html.dark{
-    @apply bg-slate-700;
+@layer variants{
+
 }
+
+
+
+
 /**
     ***FlexBox Hacks***
 */
 .break{
-    &__row{
+    &_row{
         flex-basis: 100%;
     height: 0;
     }
-    &__column{
+    &_column{
         flex-basis: 100%;
         width: 0;
     }
@@ -52,11 +82,5 @@ html.dark{
     Telling CSS to turn the lights back on
     Before it closes the proverbial door on it's self
 */
-// html,body{
-//     visibility: visible;
-//     opacity: 1;
-// }
-html,body{
-    visibility: visible;
-    opacity: 1;
-}
+
+html,body{@apply transition-opacity visible opacity-100}
