--- a/www/XElement/src/styles/variables.scss
+++ b/www/XElement/src/styles/variables.scss
@@ -4,18 +4,88 @@
 :root{
 
     //Site Colours
-    
-    // --bg-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-    --bg-image:linear-gradient(to top, #white 0%, #eef1f5 100%);
+    --color-slate:hsl(215, 36%, 17%);
+    --color-oldBook: hsla(36, 48%, 76%, 0.596);
+    --color-mintcream: hsl(150, 100%, 98%);
 
+    --color-black: hsl(0, 5%, 11%);
+    --color-blue-royal: hsl(225, 73%, 57%);
+    --color-blue-navy: hsl(240, 100%, 25%);
+    --color-green: hsl(120, 100%, 50%);
 }
-:root.warm{
-    --bg-image: linear-gradient(to bottom,#e9e9e9  0%, #ffecd2 100%);
-}
-:root.dark{
-    
-    // --bg-image: linear-gradient(to top, #101824 0%, #253d50 100%);
-    // --bg-image: linear-gradient(to bottom, #232526 0%, black 100%);
-    // --bg-image: linear-gradient(180deg, rgba(46,52,62,1) 11%, rgba(35,35,47,1) 73%, rgba(14,14,25,1) 100%)
-    // @apply bg-slate-900
-}
+:root{
+    color-scheme: light dark;
+    /**
+        Light Theme 
+    */
+        --theme-bg-color:var(--color-mintcream);
+        --theme-text-color:var(--color-black);
+        
+        //Text Colours
+        --theme-body: var(--color-black);
+        --theme-headings:var(--color-black) ;
+        --theme-links: ;
+        --theme-bold: ;
+        --theme-counters: ;
+        --theme-bullets: ;
+        --theme-hr: ;
+        --theme-quotes: ;
+        --theme-quote-borders: ;
+        --theme-code: ;
+        --theme-code-bg: ;
+        --theme-code-border: ;
+        --theme-pre-code: ;
+        --theme-pre-bg: ;
+        --theme-pre-border: ;
+        --theme-th-borders:  
+        --theme-td-borders: ;
+        
+        &.warm{
+        /**
+        Warm Theme
+        */
+        color-scheme: light;
+        --theme-bg-color:var(--color-oldBook);
+        --theme-body: var(--color-black);
+        --theme-headings:var(--color-black) ;
+        --theme-links: ;
+        --theme-bold: ;
+        --theme-counters: ;
+        --theme-bullets: ;
+        --theme-hr: ;
+        --theme-quotes: ;
+        --theme-quote-borders: ;
+        --theme-code: ;
+        --theme-code-bg: ;
+        --theme-code-border: ;
+        --theme-pre-code: ;
+        --theme-pre-bg: ;
+        --theme-pre-border: ;
+        --theme-th-borders:  
+        --theme-td-borders: ;
+    }
+    &.dark{
+        /**
+           Dark Theme
+        */
+        color-scheme: dark;
+        --theme-bg-color:var(--color-slate);
+        --theme-body: var(--color-black);
+        --theme-headings:var(--color-black) ;
+        --theme-links: ;
+        --theme-bold: ;
+        --theme-counters: ;
+        --theme-bullets: ;
+        --theme-hr: ;
+        --theme-quotes: ;
+        --theme-quote-borders: ;
+        --theme-code: ;
+        --theme-code-bg: ;
+        --theme-code-border: ;
+        --theme-pre-code: ;
+        --theme-pre-bg: ;
+        --theme-pre-border: ;
+        --theme-th-borders:  
+        --theme-td-borders: ;
+    }
+}   
