Update with latest work

--- a/www/XElement/src/components/Header/StorkSearch.astro
+++ b/www/XElement/src/components/Header/StorkSearch.astro
@@ -2,9 +2,16 @@
     import XElement from 'astro-xelement'
 
     const{div:StorkSearchBox}=XElement
+    // import 'https://files.stork-search.net/basic.css'
 ---
 
-<StorkSearchBox>
-
+<StorkSearchBox
+    @do={()=>{
+        stork.initialize()
+        stork.downloadIndex("xelement", "/xelement.st")
+        stork.attach('xelement')
+    }}>
+    <input data-stork="xelement" />
 </StorkSearchBox>
-<script src="https://files.stork-search.net/stork.js"></script>
+    <div data-stork="xelement-output"></div>
+<script src="https://files.stork-search.net/stork.js" hoist></script>
