--- a/www/xelement_backup/src/layouts/DocumentLayout.astro
+++ b/www/xelement_backup/src/layouts/DocumentLayout.astro
@@ -19,7 +19,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <Stylesheet list={[
+		<!-- <link rel="stylesheet" href={Astro.resolve('../styles/tailwind.scss')}> -->
+        <!-- <Stylesheet list={[
             {
                 href:"/src/styles/tailwind.scss",
                 media:"screen"
@@ -32,7 +33,7 @@
                 href:"/src/styles/Stork.scss",
                 media:"screen"
             },
-        ]}/>
+        ]}/> -->
         <title>{content.title}</title>
     </head>
     <body class="">
