--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
-import Slots from '../components/Slots.astro'
-import Sandy from '../components/sandpack/Sandpack.jsx'
-import DateTime from '../components/DateTime.astro'
-import Counter from '../components/Counter.jsx'
-
+// Component imports and setup JavaScript go here!
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<link rel="stylesheet" href={Astro.resolve('../styles/tailwind.scss')}>
 		<meta name="viewport" content="width=device-width" />
 		<title>Welcome to Astro</title>
 		<style>
@@ -20,16 +14,6 @@ import Counter from '../components/Counter.jsx'
 	</head>
 
 	<body>
-		<h1 class="text-purple-500">Welcome to <a href="https://astro.build/">Astro</a></h1>
-		<Slots>
-			<h1 slot="intro">Intro</h1>
-			<h2 >Default</h2>
-			<h3 slot="outro">Outro</h3>
-		</Slots>
-		<DateTime></DateTime>
-			<Counter {count=0} client:load>
-				<h1>Hello from React</h1>
-			</Counter>
-		<Sandy client:only/>
+		<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
 	</body>
 </html>
