--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -8,12 +8,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Welcome to Astro</title>
 		<style>
-			/* scoped CSS styles go here: */
-			/* h1 { ... } */
+		
 		</style>
 	</head>
 
 	<body>
-		<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
+		<h1>Does This work</h1>
 	</body>
 </html>
