--- a/www/xelement/src/layouts/BaseLayout.astro
+++ b/www/xelement/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Stylesheet from 'astro-stylesheet'
+const {pageInfo} = Astro.props
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -14,7 +15,7 @@ import Stylesheet from 'astro-stylesheet'
         }
     ]}
     />
-    <title>Document</title>
+    <title>{pageInfo.pageTitle}</title>
 </head>
 <body>
     <slot/>
