--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -12,7 +12,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
     const {astro} = content
     const {headers,source} = astro
     const baseInfo={
-        pageTitle: content.page_title,
+        pageTitle: content.page_title ?? "",
         pageDescription: content.page_description
     }
 ---
