This should build

--- a/www/xelement/src/layouts/BaseLayout.astro
+++ b/www/xelement/src/layouts/BaseLayout.astro
@@ -1,6 +1,5 @@
 ---
 import Stylesheet from 'astro-stylesheet'
-const {pageInfo} = Astro.props
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +14,7 @@ const {pageInfo} = Astro.props
         }
     ]}
     />
-    <title>{pageInfo.pageTitle}</title>
+    <title>XElement</title>
 </head>
 <body>
     <slot/>
