--- a/www/xelement/src/pages/docs/[...slug].astro
+++ b/www/xelement/src/pages/docs/[...slug].astro
@@ -3,11 +3,10 @@ import DocsLayout from '../../layouts/DocsLayout.astro'
 
 export async function getStaticPaths() {
     const docdir = '../../../../../docs/XElement/'
-
     const paths = Object.keys(
         import.meta.glob('../../../../../docs/XElement/**/*.md')
     ).map(
-        (slug) => {
+         (slug) => {
           return ({
             params: {
                 slug: slug.slice(docdir.length, -3).toLowerCase(),
@@ -18,16 +17,21 @@ export async function getStaticPaths() {
             },
         })}
     ).filter(x=>!(x.props.slug.includes('sarahedits'))).filter(x=>!(x.props.slug.includes('readme')))
+   
     const hash = Object.create(null)
+    
     /** Attaches a nested menu to an array of static paths. */
-    const withNestedMenu = (paths) => {
+    const withNestedMenu = async (paths) => {
       const root = { name: 'root' }
 
+      const fetchData = async(path)=>{
+        return await import(path).then(exports=>exports.frontmatter)
+      }
       for (const path of paths) {
-        let item = root
-
         const segments = path.props.slug.split('/')
         const filtered = segments.filter(x=> x!=='').filter(x=> !(x.includes('readme')))
+        let item = root
+        
         for (const [index, name] of Object.entries(filtered)) {
           if(!item.items){
             item.items = []
@@ -55,18 +59,26 @@ export async function getStaticPaths() {
         //   title:path.props.slug.split('/').join(' ')
         // })
         path.props.menu = root.items
-
+        path.props.data = await fetchData(path.props.path)
       }
       return paths
     }
+
     return withNestedMenu(paths)
 }
 
-const contents = await import(Astro.props.path).then(exports => ({
-    contents: exports.frontmatter,
-}))
-
-const props = Astro.props
 
 ---
-<DocsLayout contents={contents} props={props}/>
+<DocsLayout content={Astro.props}/>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html> -->
