Just working on some things

--- a/www/xelement/src/components/Header/StorkSearch.astro
+++ b/www/xelement/src/components/Header/StorkSearch.astro
@@ -4,7 +4,7 @@
     const{div:StorkSearchBox}=XElement
     // import 'https://files.stork-search.net/basic.css'
 ---
-
+<!-- 
 <StorkSearchBox
     @do={()=>{
         stork.initialize()
@@ -14,4 +14,4 @@
     <input data-stork="xelement" />
 </StorkSearchBox>
     <div data-stork="xelement-output"></div>
-<script src="https://files.stork-search.net/stork.js" hoist></script>
+<script src="https://files.stork-search.net/stork.js" hoist></script> -->
