--- a/www/xelement/src/components/Header/ThemeToggle.astro
+++ b/www/xelement/src/components/Header/ThemeToggle.astro
@@ -3,57 +3,60 @@ import XElement from 'astro-xelement'
 import { Icon } from 'astro-icon'
 
 const {div:ToggleContainer,button:ToggleButton}=XElement
+
+const onLoad = ()=>{
+    if (
+        localStorage.getItem('color-theme') === 'dark' ||
+    (!('color-theme' in localStorage) &&
+            window.matchMedia('(prefers-color-scheme: dark)').matches)
+    ) {
+            return icon_moon.classList.remove('hidden')
+
+    } else if(localStorage.getItem('color-theme') === 'warm'){
+            return icon_warm.classList.remove('hidden')
+    } 
+    else {
+            return icon_sun.classList.remove('hidden')
+    }
+}
+const onClick = ()=>{
+    const colourTheme = localStorage.getItem('color-theme')
+    const html = document.documentElement.classList
+    switch (colourTheme) {
+        case 'light':
+            localStorage.setItem('color-theme', 'warm');
+            html.add('warm');
+            icon_warm.classList.remove('hidden')
+            icon_sun.classList.add('hidden')
+            icon_moon.classList.add('hidden')
+        break;
+        case 'warm':
+            localStorage.setItem('color-theme','dark')
+            html.remove('warm');
+            html.add('dark');
+            icon_warm.classList.add('hidden')
+            icon_moon.classList.remove('hidden')
+        break
+        case 'dark':
+            localStorage.setItem('color-theme', 'light');
+            html.remove('dark');
+            icon_sun.classList.remove('hidden')
+            icon_moon.classList.add('hidden')
+        break;
+    }            
+}
+
 ---
 
 <ToggleContainer>
 
     <ToggleButton
-        @do={()=>{
-            if (
-                localStorage.getItem('color-theme') === 'dark' ||
-            (!('color-theme' in localStorage) &&
-                    window.matchMedia('(prefers-color-scheme: dark)').matches)
-            ) {
-                    icon_moon.classList.remove('hidden')
-   
-            } else if(localStorage.getItem('color-theme') === 'warm'){
-                    icon_warm.classList.remove('hidden')
-            } 
-            else {
-                    icon_sun.classList.remove('hidden')
-            }
-        }}
-
-        @click={()=>{
-           const colourTheme = localStorage.getItem('color-theme')
-           const html = document.documentElement.classList
-           switch (colourTheme) {
-               case 'light':
-                    localStorage.setItem('color-theme', 'warm');
-                    html.add('warm');
-                    icon_warm.classList.remove('hidden')
-                    icon_sun.classList.add('hidden')
-                    icon_moon.classList.add('hidden')
-                   break;
-                case 'warm':
-                    localStorage.setItem('color-theme','dark')
-                    html.remove('warm');
-                    html.add('dark');
-                    icon_warm.classList.add('hidden')
-                    icon_moon.classList.remove('hidden')
-                    break
-                case 'dark':
-                    localStorage.setItem('color-theme', 'light');
-                    html.remove('dark');
-                    icon_sun.classList.remove('hidden')
-                    icon_moon.classList.add('hidden')
-                    break;
-           }
-            
-        }}>
-        <Icon id="icon_moon" class="hidden" name="ph:moon-stars-fill"/>
-        <Icon id="icon_warm" class="hidden" name="ph:coffee-duotone"/>
-        <Icon id="icon_sun"  class="hidden" name="ph:sun-fill"/>
+        @do={onLoad}
+        @click={onClick}
+    >
+            <Icon id="icon_moon" class="hidden" name="ph:moon-stars-fill"/>
+            <Icon id="icon_warm" class="hidden" name="ph:coffee-duotone"/>
+            <Icon id="icon_sun"  class="hidden" name="ph:sun-fill"/>
     </ToggleButton>
 </ToggleContainer>
 <style lang="scss">
