The most annoying bug ever

--- a/www/xelement/src/components/Header/ThemeToggle.astro
+++ b/www/xelement/src/components/Header/ThemeToggle.astro
@@ -53,7 +53,7 @@ const onClick = ()=>{
 ---
 
 <ToggleContainer @do={onLoad} @click={onClick}>
-    <ToggleButton  id="toggle_btn">
+    <ToggleButton>
         <Icon id="icon_moon" class="hidden" name="ph:moon-stars-fill"/>
         <Icon id="icon_warm" class="hidden" name="ph:coffee-duotone"/>
         <Icon id="icon_sun"  class="hidden" name="ph:sun-fill"/>
