--- a/www/xelement/src/styles/colors.scss
+++ b/www/xelement/src/styles/colors.scss
@@ -13,22 +13,22 @@
     
     //Text Colors
     --theme-body: var(--theme-bg-color) ;
-    --theme-headings: ;
-    --theme-links: ;
-    --theme-bold: ;
-    --theme-counters: ;
-    --theme-bullets: ;
-    --theme-hr: ;
-    --theme-quotes: ;
-    --theme-quote-borders: ;
-    --theme-code: ;
-    --theme-code-bg: ;
-    --theme-code-border: ;
-    --theme-pre-code: ;
-    --theme-pre-bg: ;
-    --theme-pre-border: ;
-    --theme-th-borders:  
-    --theme-td-borders: ;
+    --theme-headings: #785BB9;
+    --theme-links: #785BB9;
+    --theme-bold: #785BB9;
+    --theme-counters: #785BB9;
+    --theme-bullets: #785BB9;
+    --theme-hr: #785BB9;
+    --theme-quotes: #785BB9;
+    --theme-quote-borders: #785BB9;
+    --theme-code: #785BB9;
+    --theme-code-bg: #785BB9;
+    --theme-code-border: #785BB9;
+    --theme-pre-code: #785BB9;
+    --theme-pre-bg: #785BB9;
+    --theme-pre-border: #785BB9;
+    --theme-th-borders: #785BB9; 
+    --theme-td-borders: #785BB9;
 }
 :root.warm{
     color-scheme: light;
@@ -36,22 +36,22 @@
     --theme-text-color:var(--text-warm);
     //Text Colors
     --theme-body: var(--theme-bg-color);
-    --theme-headings: ;
-    --theme-links: ;
-    --theme-bold: ;
-    --theme-counters: ;
-    --theme-bullets: ;
-    --theme-hr: ;
-    --theme-quotes: ;
-    --theme-quote-borders: ;
-    --theme-code: ;
-    --theme-code-bg: ;
-    --theme-code-border: ;
-    --theme-pre-code: ;
-    --theme-pre-bg: ;
-    --theme-pre-border: ;
-    --theme-th-borders:  
-    --theme-td-borders: ;
+    --theme-headings: #785BB9;
+    --theme-links: #785BB9;
+    --theme-bold: #785BB9;
+    --theme-counters: #785BB9;
+    --theme-bullets: #785BB9;
+    --theme-hr: #785BB9;
+    --theme-quotes: #785BB9;
+    --theme-quote-borders: #785BB9;
+    --theme-code: #785BB9;
+    --theme-code-bg: #785BB9;
+    --theme-code-border: #785BB9;
+    --theme-pre-code: #785BB9;
+    --theme-pre-bg: #785BB9;
+    --theme-pre-border: #785BB9;
+    --theme-th-borders:  #785BB9;
+    --theme-td-borders: #785BB9;
 }
 
 :root.dark{
@@ -60,38 +60,38 @@
     --text-text-color:var(--text-dark);
     //Text Colors
     --theme-body: var(--theme-bg-color) ;
-    --theme-headings: ;
-    --theme-links: ;
-    --theme-bold: ;
-    --theme-counters: ;
-    --theme-bullets: ;
-    --theme-hr: ;
-    --theme-quotes: ;
-    --theme-quote-borders: ;
-    --theme-code: ;
-    --theme-code-bg: ;
-    --theme-code-border: ;
-    --theme-pre-code: ;
-    --theme-pre-bg: ;
-    --theme-pre-border: ;
-    --theme-th-borders:  
-    --theme-td-borders: ;
+    --theme-headings: #785BB9;
+    --theme-links: #785BB9;
+    --theme-bold: #785BB9;
+    --theme-counters: #785BB9;
+    --theme-bullets: #785BB9;
+    --theme-hr: #785BB9;
+    --theme-quotes: #785BB9;
+    --theme-quote-borders: #785BB9;
+    --theme-code: #785BB9;
+    --theme-code-bg: #785BB9;
+    --theme-code-border: #785BB9;
+    --theme-pre-code: #785BB9;
+    --theme-pre-bg: #785BB9;
+    --theme-pre-border: #785BB9;
+    --theme-th-borders: #785BB9; 
+    --theme-td-borders: #785BB9;
     //Inverted Text Colors
-    --theme-invert-body: ;
-    --theme-invert-headings: ;
-    --theme-invert-links: ;
-    --theme-invert-bold: ;
-    --theme-invert-counters: ;
-    --theme-invert-bullets: ;
-    --theme-invert-hr: ;
-    --theme-invert-quotes: ;
-    --theme-invert-quote-borders: ;
-    --theme-invert-code: ;
-    --theme-invert-code-bg: ;
-    --theme-invert-code-border: ;
-    --theme-invert-pre-code: ;
-    --theme-invert-pre-bg: ;
-    --theme-invert-pre-border: ;
-    --theme-invert-th-borders:  
-    --theme-invert-td-borders: ;
+    --theme-invert-body: #785BB9;
+    --theme-invert-headings: #785BB9;
+    --theme-invert-links: #785BB9;
+    --theme-invert-bold: #785BB9;
+    --theme-invert-counters: #785BB9;
+    --theme-invert-bullets: #785BB9;
+    --theme-invert-hr: #785BB9;
+    --theme-invert-quotes: #785BB9;
+    --theme-invert-quote-borders: #785BB9;
+    --theme-invert-code: #785BB9;
+    --theme-invert-code-bg: #785BB9;
+    --theme-invert-code-border: #785BB9;
+    --theme-invert-pre-code: #785BB9;
+    --theme-invert-pre-bg: #785BB9;
+    --theme-invert-pre-border: #785BB9;
+    --theme-invert-th-borders: #785BB9; 
+    --theme-invert-td-borders: #785BB9;
 }
